# soem-interface

./: CMakeLists.txt  README.md  el7_csp_test.c
test/linux/SMCI/: CMakeLists.txt
test/linux/SMCI/css/: style.css
test/linux/SMCI/json/: hmrs_template.json  stocks.json  template.json  users.json
test/linux/SMCI/shared/: app_context.c  app_context.h  ethercat_comm.c  ethercat_comm.h  slave_selector.c  slave_selector.h
test/linux/SMCI/src/: main.c  position_test.c  templates.c  velocity_test.c
test/linux/SMCI/templates/Matrix1/: yamuna.c
test/linux/SMCI/templates/Matrix6/: mainTem.c
test/linux/cyclic_mode_single_motor/: CMakeLists.txt  cyclic_mode_single_motor.c
test/linux/cyclic_synchronous_velocity_mode/: CMakeLists.txt  cyclic_synchronous_velocity_mode.c
test/linux/dell_hmrs/: CMakeLists.txt  dell_hmrs.c  dell_windows.c  directionless.c  interface.ui  movement_dynamic.c
test/linux/keyboard_motor/: CMakeLists.txt  keyboard_motor.c
test/linux/multi_motor_keyboard/: CMakeLists.txt  multi_motor_keyboard.c
test/linux/profile_velocity_mode/: CMakeLists.txt  profile_velocity_mode.c
test/linux/simple_test/: simple_test.c
test/linux/single_motor_test/: CMakeLists.txt  single_motor_test.c
test/linux/single_motor_test_velocity/: CMakeLists.txt  single_motor_test_velocity.c
test/linux/slave_detector_api/: CMakeLists.txt  slave_detector_api.c  slave_detector_api.h
test/linux/ui_motor_velocity/: CMakeLists.txt  ui_motor_velocity.c
